[package]
publish = false
name = "crux_cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version = "1.70"

[[bin]]
name = "crux"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
ascent = "0.7.0"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
guppy = "0.17.4"
ignore = "0.4.23"
lazy-regex = "3.3.0"
libc = "0.2.161"
petgraph = "0.6.5"
ramhorns = "1.0.1"
rustdoc-json = "0.9.2"
rustdoc-types = "0.32.2"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.132"
similar = { version = "2.6.0", features = ["inline"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-fd = "0.3.0"
toml = "0.8.19"
